--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     //Android Library:
     compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    //从图像中提取突出的颜色 http://blog.csdn.net/zhangweiwtmdbf/article/details/45038619
+    compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:design:${rootProject.ext.supportLibVersion}"
     //compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
     //compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
