market info upload

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         incremental true
         preDexLibraries = false
         jumboMode = true
-        //javaMaxHeapSize "4g"
+        javaMaxHeapSize "4g"
     }
 }
 
