--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.novoda:bintray-release:0.3.4'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
@@ -28,7 +28,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    rootProject.ext.applicationId = "com.jzsec.broker"
+    applicationId = "com.jzsec.broker"
 
     minSdkVersion = 15
     targetSdkVersion = 24 //23
