--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,9 @@ dependencies {
     //从图像中提取突出的颜色 http://blog.csdn.net/zhangweiwtmdbf/article/details/45038619
     compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:design:${rootProject.ext.supportLibVersion}"
-    //compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
     //compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
-    //compile "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
     //ButterKnife
     //compile 'com.jakewharton:butterknife:7+'
     compile 'com.jakewharton:butterknife:8.2.1'
@@ -121,4 +121,6 @@ dependencies {
 
     //看代码比较用的
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+
+    compile 'com.github.baserecycleradapter:library:1.0.9'
 }
