--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':leancloud')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
     //Android Library:
@@ -144,4 +145,5 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.belerweb:pinyin4j:2.5.1'
+
 }
