--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'android-apt'
 //apply plugin: 'com.android.databinding' //MVVM
 
 android {
@@ -145,5 +146,9 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.belerweb:pinyin4j:2.5.1'
+
+    //https://github.com/mzule/ActivityRouter ### Router activities and methods with url for android
+    compile 'com.github.mzule.activityrouter:activityrouter:1.2.1'
+    apt 'com.github.mzule.activityrouter:compiler:1.1.7'
 
 }
