--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'android-apt'
+apply plugin: 'com.didi.virtualapk.host'
 //apply plugin: 'com.android.databinding' //MVVM
 
 android {
@@ -88,6 +89,10 @@ dependencies {
     compile project(path: ':wxrecord')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
+
+    // https://github.com/didi/VirtualAPK
+    compile 'com.didi.virtualapk:core:0.9.0'
+
     //Android Library:
     compile 'com.android.support:support-v4:' + rootProject.ext.supportLibVersion
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibVersion
