--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //compile project(path: ':leancloud')
-    compile project(path: ':wxrecord')
+    //compile project(path: ':wxrecord')
+    compile project(path: ':fitandroid7')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
 
@@ -204,4 +205,5 @@ dependencies {
     // @Deprecated
     compile 'com.github.mzule.activityrouter:activityrouter:1.2.1'
     apt 'com.github.mzule.activityrouter:compiler:1.1.7'
+
 }
