--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,6 +157,15 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.jzsec.broker.android7.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
