--- a/leancloud/build.gradle
+++ b/leancloud/build.gradle
@@ -31,27 +31,28 @@ android {
 }
 
 dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:' + rootProject.ext.supportLibVersion
 
     // LeanCloud 基础包
-    compile ('cn.leancloud.android:avoscloud-sdk:v4.4.3')
+    compile ('cn.leancloud.android:avoscloud-sdk:v4.4.4')
 
     // 推送与实时聊天需要的包
-    compile ('cn.leancloud.android:avoscloud-push:v4.4.3@aar'){transitive = true}
+    compile ('cn.leancloud.android:avoscloud-push:v4.4.4@aar'){transitive = true}
 
     // LeanCloud 统计包
-    compile ('cn.leancloud.android:avoscloud-statistics:v4.4.3')
+    compile ('cn.leancloud.android:avoscloud-statistics:v4.4.4')
 
     // LeanCloud 用户反馈包
-    compile ('cn.leancloud.android:avoscloud-feedback:v4.4.3@aar')
+    compile ('cn.leancloud.android:avoscloud-feedback:v4.4.4@aar')
 
     // avoscloud-sns：LeanCloud 第三方登录包
-    compile ('cn.leancloud.android:avoscloud-sns:v4.4.3@aar')
+    compile ('cn.leancloud.android:avoscloud-sns:v4.4.4@aar')
     compile ('cn.leancloud.android:qq-sdk:1.6.1-leancloud')
     // 目前新浪微博官方只提供 jar 包的集成方式
     // 请手动下载新浪微博 SDK 的 jar 包，将其放在 libs 目录下进行集成
 
     // LeanCloud 应用内搜索包
-    compile ('cn.leancloud.android:avoscloud-search:v4.4.3@aar')
+    compile ('cn.leancloud.android:avoscloud-search:v4.4.4@aar')
 }
