--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
 
+    compile 'com.aliyun.ams:alicloud-android-hotfix:3+'
+
     // https://github.com/didi/VirtualAPK
     compile 'com.didi.virtualapk:core:0.9.0'
 
