--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ allprojects {
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/public"
         }
+
+        maven {
+            url "http://maven.aliyun.com/nexus/content/repositories/releases"
+        }
     }
 }
 
@@ -52,7 +56,7 @@ ext {
     targetCompatibility = JavaVersion.VERSION_1_8
 
     versionCode = 0
-    versionName = '0.1.0'
+    versionName = '0.1.1'
 
     supportLibVersion = '25.3.1' //'24.2.1' //'23.4.0'
     playLibVersion = '8.4.0'
