--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
         }
     }
     buildTypes {
+        /*debug {
+            minifyEnabled false
+            useProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }*/
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -132,9 +137,14 @@ dependencies {
      * Fragmentation => https://github.com/YoKeyword/Fragmentation
      */
     // appcompat v7包是必须的
-    compile 'me.yokeyword:fragmentation:0.10.7'
+    //compile 'me.yokeyword:fragmentation:0.10.7'
     // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
-    compile 'me.yokeyword:fragmentation-swipeback:0.10.4'
+    //compile 'me.yokeyword:fragmentation-swipeback:0.10.4'
+
+    // To get SwipeBack feature, rely on both fragmentation & fragmentation-swipeback
+    compile 'me.yokeyword:fragmentation:1.1.6'
+    // Swipeback is based on fragmentation. Refer to SwipeBackActivity/Fragment for your Customized SupportActivity/Fragment
+    compile 'me.yokeyword:fragmentation-swipeback:1.1.6'
 
     //Glide's OkHttp Integration
     compile 'com.github.bumptech.glide:okhttp-integration:1.3.1@aar'
